<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/new_view_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_when"
        android:textSize="14sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/new_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_title"
        android:layout_below="@id/new_view_when"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/new_view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_view_content"
        android:layout_below="@id/new_view_title"
        android:textSize="14sp"/>

</RelativeLayout>