<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/new_item_checkread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="0sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_marginRight="5dp"/>

    <TextView
        android:id="@+id/new_item_class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_class_name"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/new_item_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_when"
        android:layout_below="@id/new_item_class_name"
        android:textSize="15sp"
        android:textColor="#666666"/>

    <TextView
        android:id="@+id/new_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_title"
        android:layout_below="@id/new_item_when"
        android:textSize="16.8sp"
        android:textColor="#000000"/>

    <!--<TextView-->
        <!--android:id="@+id/new_item_self"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="0sp"-->
        <!--android:textColor="@android:color/transparent"-->
        <!--android:visibility="invisible" />-->


</RelativeLayout>